--- a/Multiheadlatentattention.ipynb
+++ b/Multiheadlatentattention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP522Z6jGO5rbfCAReMhINL",
+      "authorship_tag": "ABX9TyMDnbdM4WTC/9ze3P7pQJnx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/goelnikhils-lgtm/languagemodels/blob/main/Multiheadlatentattention.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "CREDIT - >https://www.youtube.com/watch?v=mIaWmJVrMpc&list=PLPTV0NXA_ZSiOpKKlHCyOq9lnp-dLvlms&index=13"
+      ],
+      "metadata": {
+        "id": "khBprqJnSRfl"
+      }
     },
     {
       "cell_type": "code",
@@ -122,6 +131,25 @@
       ],
       "metadata": {
         "id": "gL0fqHQvf1-y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#01/02 - MLA\n",
+        "#I am coding again\n",
+        "#my understanding of MLA is:\n",
+        "#Q = X * Wdv  -> project  input embedding X into lower dimension my multiplying with lower dimension matrix\n",
+        "#Ck = X*Wdv -> This is called latent matrix and is cached - l*b*s*h*c\n",
+        "#K = Ck*Wuk - Wuk matrix is fixed at training time\n",
+        "#V = Ck*Wuv\n",
+        "#absorbtion trick -> results to attention scores ->  absorb Q*KT = X*Wq *Wdv* WukT*XT = [X*(Wq*Wukt)] -> this is absorbtion -> merging Q with Wuk and this matrix is fixed at training time. WdvT*XT will be cached\n",
+        "#"
+      ],
+      "metadata": {
+        "id": "YyNZXIoPSIpP"
       },
       "execution_count": null,
       "outputs": []
