--- a/Multiheadlatentattention.ipynb
+++ b/Multiheadlatentattention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDnbdM4WTC/9ze3P7pQJnx",
+      "authorship_tag": "ABX9TyNnPTtZBpxH5BfTF9JeFGl8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,17 +141,86 @@
         "#01/02 - MLA\n",
         "#I am coding again\n",
         "#my understanding of MLA is:\n",
-        "#Q = X * Wdv  -> project  input embedding X into lower dimension my multiplying with lower dimension matrix\n",
-        "#Ck = X*Wdv -> This is called latent matrix and is cached - l*b*s*h*c\n",
-        "#K = Ck*Wuk - Wuk matrix is fixed at training time\n",
-        "#V = Ck*Wuv\n",
-        "#absorbtion trick -> results to attention scores ->  absorb Q*KT = X*Wq *Wdv* WukT*XT = [X*(Wq*Wukt)] -> this is absorbtion -> merging Q with Wuk and this matrix is fixed at training time. WdvT*XT will be cached\n",
-        "#"
+        "#Q = X * Wq  -> project  input embedding X into lower dimension space(latent space) my multiplying with lower dimension matrix\n",
+        "#CKV = X*Wdv -> This is called latent matrix and is cached t0 reduce the KV cache size to -> l*b*s*h*c\n",
+        "#K = Ck*Wuk -> where Wuk is the up projection matrix for K and that is fixed at training time\n",
+        "#V = Ck*Wuv -> where Wuv is the up projection matrix for V and that is fixed at training time\n",
+        "#absorbtion trick -> results to attention scores ->\n",
+        "#absorb Q*KT = (X*Wq) * (X*Wdv*Wuk) = [X*(Wq*Wukt)] -> merging (Wq with WukT) and this matrix is fixed at training time. WdvT*XT will be cached as this latent matrix CKV\n",
+        "#attention score = Softmax(absorption/dmodel)\n",
+        "#Attention Weights /context vector = Attention scores *VT\n",
+        "\n"
       ],
       "metadata": {
         "id": "YyNZXIoPSIpP"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class RopelessMLA(nn.Module):\n",
+        "  def __init__(self,d_model,n_heads,kv_latent_dim):\n",
+        "    super().__init__()\n",
+        "    self.d_model = d_model\n",
+        "    self.n_heads = n_heads\n",
+        "    self.dh = d_model // n_heads #dimension per head\n",
+        "\n",
+        "    #projection layers\n",
+        "    self.W_q = nn.Linear(d_model,d_model,bias=False) # query projection\n",
+        "    self.W_dkv = nn.Linear(d_model,kv_latent_dim,bias=False) # compress embedding into lower latent space\n",
+        "    self.W_uk = nn.Linear(kv_latent_dim,d_model,bias=False) # decompress uk matrix\n",
+        "    self.W_uv = nn.Linear(kv_latent_dim,d_model,bias=False) #decompress uv matrix\n",
+        "    self.W_o = nn.Linear(d_model,d_model,bias=False) # final output projection - context vector\n",
+        "\n",
+        "    self.ln = nn.LayerNorm(kv_latent_dim)\n",
+        "    self.register_buffer('absorbed_k',None) # holds W_q @ W_uk - buffer is used for holding\n",
+        "\n",
+        "    def forward(self,x,kv_cache = None,past_length=0):\n",
+        "      B,S,D = x.size() #batch , sequence , dimension\n",
+        "      if self.absorbed_k is None:\n",
+        "        absorbed = torch.matmul(self.W_q.weight,self.W_uk.weight)\n",
+        "        self.absorbed_k = absorbed.view(self.n_heads,self.dh,-1)\n",
+        "      c_kv = self.ln(self.W_dkv(x)) #latent matrix\n",
+        "      if kv_cache is None:\n",
+        "        c_kv = c_kv\n",
+        "      else:\n",
+        "        c_kv = torch.cat([kv_cache,c_kv],dim=1)\n",
+        "      #calculate attention scores\n",
+        "      S_full = c_kv.size(1)\n",
+        "      v_full = self.W_uv(c_kv)\n",
+        "      v = v_full.view(B,S_full,self.n_heads,self.dh).transpose(1,2)\n",
+        "\n",
+        "      q = x.view(B,S,self.n_heads,self.dh)\n",
+        "      attn_scores = torch.zeros(B,self.n_heads,S,S_full,device=x.device)\n",
+        "      for h in range(self.n_heads):\n",
+        "        tmp = torch.matmul(q[:,:,h],self.absorbed_k[h])\n",
+        "        attn_scores[:,h] = torch.bmm(tmp,c_kv.transpose(1,2))\n",
+        "\n",
+        "      attn_scores = attn_scores / (self.dh**0.5)\n",
+        "      mask = torch.tril(torch.ones((S,S_full),device=x.device),diagonal=past_length) # causal mask\n",
+        "      attn_scores = attn_scores.masked_fill(mask.view(1,1,S,S_full)==0,float('-inf'))\n",
+        "      attn_weights = F.softmax(attn_scores,dim=-1)\n",
+        "\n",
+        "      #calculate final context vectors\n",
+        "      out_heads = []\n",
+        "      for h in range(self.n_heads):\n",
+        "        context_h = torch.matmul(attn_weights[:,h],v[:,h])\n",
+        "        out_heads.append(context_h)\n",
+        "\n",
+        "      #concatenate all vectors\n",
+        "      out = torch.cat(out_heads,dim=-1)\n",
+        "      return self.W_o(out),c_kv"
+      ],
+      "metadata": {
+        "id": "MMRG93R3j9h1"
+      },
+      "execution_count": 2,
       "outputs": []
     }
   ]
